# wellbeing-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wellbeing_mcp/: __main__.py  server.py
