[project]
name = "wellbeing-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for personal health tracking and AI-assisted wellbeing analysis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Mason" }
]
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
wellbeing-mcp = "wellbeing_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wellbeing_mcp"]